pod-security/restricted/disallow-privilege-escalation/e2e/01-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- ../disallow-privilege-escalation.yaml
assert:
- policy-assert.yaml
