pod-security/restricted/disallow-privilege-escalation/e2e/good-cronjob.yaml
###### CronJobs - Good
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob01
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: busybox:1.35
            securityContext:
              allowPrivilegeEscalation: false
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob02
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: busybox:1.35
            securityContext:
              allowPrivilegeEscalation: false
          - name: container02
            image: busybox:1.35
            securityContext:
              allowPrivilegeEscalation: false
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob03
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: initcontainer01
            image: busybox:1.35
            securityContext:
              allowPrivilegeEscalation: false
          containers:
          - name: container01
            image: busybox:1.35
            securityContext:
              allowPrivilegeEscalation: false
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob04
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: initcontainer01
            image: busybox:1.35
            securityContext:
              allowPrivilegeEscalation: false
          - name: initcontainer02
            image: busybox:1.35
            securityContext:
              allowPrivilegeEscalation: false
          containers:
          - name: container01
            image: busybox:1.35
            securityContext:
              allowPrivilegeEscalation: false
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob05
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: initcontainer01
            image: busybox:1.35
            securityContext:
              allowPrivilegeEscalation: false
          - name: initcontainer02
            image: busybox:1.35
            securityContext:
              allowPrivilegeEscalation: false
          containers:
          - name: container01
            image: busybox:1.35
            securityContext:
              allowPrivilegeEscalation: false
          - name: container02
            image: busybox:1.35
            securityContext:
              allowPrivilegeEscalation: false
