pod-security/restricted/disallow-privilege-escalation/e2e/good-pod.yaml
###### Pods - Good
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
  - name: container01
    image: busybox:1.35
    securityContext:
      allowPrivilegeEscalation: false
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
  - name: container01
    image: busybox:1.35
    securityContext:
      allowPrivilegeEscalation: false
  - name: container02
    image: busybox:1.35
    securityContext:
      allowPrivilegeEscalation: false
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
    securityContext:
      allowPrivilegeEscalation: false
  containers:
  - name: container01
    image: busybox:1.35
    securityContext:
      allowPrivilegeEscalation: false
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
    securityContext:
      allowPrivilegeEscalation: false
  - name: initcontainer02
    image: busybox:1.35
    securityContext:
      allowPrivilegeEscalation: false
  containers:
  - name: container01
    image: busybox:1.35
    securityContext:
      allowPrivilegeEscalation: false
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod05
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
    securityContext:
      allowPrivilegeEscalation: false
  - name: initcontainer02
    image: busybox:1.35
    securityContext:
      allowPrivilegeEscalation: false
  containers:
  - name: container01
    image: busybox:1.35
    securityContext:
      allowPrivilegeEscalation: false
  - name: container02
    image: busybox:1.35
    securityContext:
      allowPrivilegeEscalation: false
