pod-security/restricted/disallow-privilege-escalation/remediate-disallow-privilege-escalation.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: remediate-disallow-privilege-escalation
  annotations:
    policies.kyverno.io/title: Remediate Disallow Privilege Escalation
    policies.kyverno.io/category: Pod Security Standards (Restricted)
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    kyverno.io/kyverno-version: 1.6.0
    kyverno.io/kubernetes-version: "1.22-1.23"
    policies.kyverno.io/description: >-
      Privilege escalation, such as via set-user-ID or set-group-ID file mode, should not be allowed.
      This policy mutates the fields
      spec.containers[*].securityContext.allowPrivilegeEscalation,
      spec.initContainers[*].securityContext.allowPrivilegeEscalation,
      and spec.ephemeralContainers[*].securityContext.allowPrivilegeEscalation
      to `false`.
spec:
  background: false
  rules:
    - name: remove-previlege-escalation
      match:
        any:
          - resources:
              kinds:
                - Deployment
                - StatefulSet
                - Job
                - DaemonSet
      mutate:
        foreach:
        - list: "request.object.spec.template.spec.[containers, initContainers, ephemeralContainers][]"
          order: Descending
          patchStrategicMerge:
            spec:
              template:
                spec:
                  containers:
                    - (name): "{{ element.name }}"
                      securityContext:
                        (allowPrivilegeEscalation): true
                        allowPrivilegeEscalation: false
                  initContainers:
                    - (name): "{{ element.name }}"
                      securityContext:
                        (allowPrivilegeEscalation): true
                        allowPrivilegeEscalation: false
                  ephemeralContainers:
                    - (name): "{{ element.name }}"
                      securityContext:
                        (allowPrivilegeEscalation): true
                        allowPrivilegeEscalation: false
