pod-security/restricted/disallow-privilege-escalation/e2e/enforce-policy-assert.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: disallow-privilege-escalation
spec:
  validationActions: [Deny]
status:
  conditionStatus:
    ready: true
