pod-security/restricted/disallow-privilege-escalation/e2e/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-privilege-escalation-policy
spec:
  steps:
  - name: test-disallow-privilege-escalation
    try:
    - apply:
        file: ../disallow-privilege-escalation.yaml
    - assert:
        file: policy-assert.yaml
    - apply:
        file: ../remediate-disallow-privilege-escalation.yaml
    - assert:
        file: remediation-policy-assert.yaml
    - apply:
        file: ../deployment.yaml
    - sleep:
        duration: 30s
    - assert:
        resource:
          apiVersion: wgpolicyk8s.io/v1alpha2
          kind: PolicyReport
          metadata:
            name: cpol-disallow-privilege-escalation
          summary:
            error: 0
            fail: 0
    - delete:
        ref:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          name: remediate-capabilities-strict
    - script:
        content: |
          sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' ../disallow-privilege-escalation.yaml | kubectl apply -f - 
    - assert:
        file: enforce-policy-assert.yaml
    - apply:
        file: good-resource.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-resource.yaml
